# amaterasu

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/filesystem/: cow.rs  detector.rs  mod.rs
src/io/: async_writer.rs  mod.rs
src/patterns/: mod.rs  random.rs
src/security/: metadata.rs  mod.rs  verification.rs
src/storage/: detector.rs  mod.rs
