[package]
name = "amaterasu"
version = "0.1.0"
edition = "2021"
description = "A modern, fast file secure deletion tool for Linux"
license = "MIT OR Apache-2.0"
authors = ["Amaterasu Contributors"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
rand_chacha = "0.3"
nix = { version = "0.27", features = ["fs", "ioctl"] }
indicatif = "0.17"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
blake3 = "1.5"
io-uring = { version = "0.6", optional = true }
futures = "0.3"
num_cpus = "1.0"

[features]
default = []
io-uring = ["dep:io-uring"]

[dev-dependencies]
tempfile = "3.8"
